Convert styles to scss, move all components to folder, add Palette class

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,10 +19,20 @@ code {
 }
 
 .app {
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: center;
-  padding: 4rem;
+  padding: 4rem; */
+}
+
+.top {
+  padding: 1rem 2rem;
+  border: 1px dashed royalblue;
+
+  // header styles, to be replaced later with an SVG
+  letter-spacing: 2px;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .palette {
