--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 $text-color: #111111;
 $text-color-light: #555555;
+$text-color-disabled: #999999;
 $font-family: 'Josefin Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
   'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
   'Helvetica Neue', sans-serif;
